repos/central-repo/cluster/clusterpolicy-cluster-policy.yaml
apiVersion: nvidia.com/v1
kind: ClusterPolicy
metadata:
  name: cluster-policy
  labels:
    app.kubernetes.io/name: gpu-operator
    helm.sh/chart: gpu-operator-v26.3.3
    app.kubernetes.io/instance: gpu-operator
    app.kubernetes.io/version: v26.3.3
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/component: gpu-operator
spec:
  hostPaths:
    rootFS: /
    driverInstallDir: /run/nvidia/driver
  operator:
    runtimeClass: nvidia
  daemonsets:
    labels:
      helm.sh/chart: gpu-operator-v26.3.3
      app.kubernetes.io/managed-by: gpu-operator
    tolerations:
    - effect: NoSchedule
      key: nvidia.com/gpu
      operator: Exists
    priorityClassName: system-node-critical
    updateStrategy: RollingUpdate
    rollingUpdate:
      maxUnavailable: '1'
  validator:
    repository: nvcr.io/nvidia
    image: gpu-operator
    version: v26.3.3
    imagePullPolicy: IfNotPresent
    plugin:
      env: []
  mig:
    strategy: single
  psa:
    enabled: false
  cdi:
    enabled: true
  driver:
    enabled: false
    useNvidiaDriverCRD: false
    kernelModuleType: auto
    usePrecompiled: false
    repository: nvcr.io/nvidia
    image: driver
    version: 580.126.20
    imagePullPolicy: IfNotPresent
    startupProbe:
      failureThreshold: 120
      initialDelaySeconds: 60
      periodSeconds: 10
      timeoutSeconds: 60
    rdma:
      enabled: false
      useHostMofed: false
    manager:
      repository: nvcr.io/nvidia/cloud-native
      image: k8s-driver-manager
      version: v0.11.0
      imagePullPolicy: IfNotPresent
    repoConfig:
      configMapName: ''
    certConfig:
      name: ''
    licensingConfig:
      nlsEnabled: true
      secretName: ''
    virtualTopology:
      config: ''
    kernelModuleConfig:
      name: ''
    upgradePolicy:
      autoUpgrade: true
      maxParallelUpgrades: 1
      maxUnavailable: 25%
      waitForCompletion:
        timeoutSeconds: 0
      podDeletion:
        force: false
        timeoutSeconds: 300
        deleteEmptyDir: false
      drain:
        enable: false
        force: false
        timeoutSeconds: 300
        deleteEmptyDir: false
  vgpuManager:
    enabled: false
    image: vgpu-manager
    imagePullPolicy: IfNotPresent
    kernelModuleConfig:
      name: ''
    driverManager:
      repository: nvcr.io/nvidia/cloud-native
      image: k8s-driver-manager
      version: v0.11.0
      imagePullPolicy: IfNotPresent
  kataManager:
    enabled: false
    imagePullPolicy: IfNotPresent
  vfioManager:
    enabled: true
    repository: nvcr.io/nvidia/cloud-native
    image: k8s-driver-manager
    version: v0.11.0
    imagePullPolicy: IfNotPresent
    driverManager:
      repository: nvcr.io/nvidia/cloud-native
      image: k8s-driver-manager
      version: v0.11.0
      imagePullPolicy: IfNotPresent
  vgpuDeviceManager:
    enabled: true
    repository: nvcr.io/nvidia/cloud-native
    image: vgpu-device-manager
    version: v0.4.2
    imagePullPolicy: IfNotPresent
    config:
      default: default
      name: ''
  ccManager:
    enabled: true
    defaultMode: 'on'
    repository: nvcr.io/nvidia/cloud-native
    image: k8s-cc-manager
    version: v0.4.0
    imagePullPolicy: IfNotPresent
  toolkit:
    enabled: true
    repository: nvcr.io/nvidia/k8s
    image: container-toolkit
    version: v1.19.1
    imagePullPolicy: IfNotPresent
    installDir: /usr/local/nvidia
  devicePlugin:
    enabled: true
    repository: nvcr.io/nvidia
    image: k8s-device-plugin
    version: v0.19.3
    imagePullPolicy: IfNotPresent
  dcgm:
    enabled: false
    repository: nvcr.io/nvidia/cloud-native
    image: dcgm
    version: 4.5.2-1-ubuntu22.04
    imagePullPolicy: IfNotPresent
  dcgmExporter:
    enabled: true
    repository: nvcr.io/nvidia/k8s
    image: dcgm-exporter
    version: 4.5.3-4.8.2-distroless
    imagePullPolicy: IfNotPresent
    serviceMonitor:
      additionalLabels: {}
      enabled: false
      honorLabels: false
      interval: 15s
      relabelings: []
    service:
      internalTrafficPolicy: Cluster
  gfd:
    enabled: true
    repository: nvcr.io/nvidia
    image: k8s-device-plugin
    version: v0.19.3
    imagePullPolicy: IfNotPresent
  migManager:
    enabled: true
    repository: nvcr.io/nvidia/cloud-native
    image: k8s-mig-manager
    version: v0.14.2
    imagePullPolicy: IfNotPresent
    config:
      default: all-disabled
    gpuClientsConfig:
      name: ''
  nodeStatusExporter:
    enabled: false
    repository: nvcr.io/nvidia
    image: gpu-operator
    version: v26.3.3
    imagePullPolicy: IfNotPresent
  gds:
    enabled: false
    repository: nvcr.io/nvidia/cloud-native
    image: nvidia-fs
    version: 2.27.3
    imagePullPolicy: IfNotPresent
  gdrcopy:
    enabled: false
    repository: nvcr.io/nvidia/cloud-native
    image: gdrdrv
    version: v2.5.2
    imagePullPolicy: IfNotPresent
  sandboxWorkloads:
    enabled: false
    defaultWorkload: container
    mode: kubevirt
  sandboxDevicePlugin:
    enabled: true
    repository: nvcr.io/nvidia
    image: kubevirt-gpu-device-plugin
    version: v1.5.0
    imagePullPolicy: IfNotPresent
  kataSandboxDevicePlugin:
    enabled: true
    repository: nvcr.io/nvidia/cloud-native
    image: nvidia-sandbox-device-plugin
    version: v0.0.3
    imagePullPolicy: IfNotPresent
